# accessbot

./: .gitignore  LICENSE  README.md  log_conf.yml  pyproject.toml  pytest.ini
.github/workflows/: test.yml
app/: auth.py  authz.py  celery_app.py  classes.py  consts.py  embeddings.py  ext_vector_store.py  i18n.py  id.py  injector_extensions_module.py  injector_main_module.py  json_file_stores.py  main.py  models.py  models_facade.py  models_facade_sql.py  models_stores.py  models_stores_sql.py  registration_provider.py  services.py  settings.py  sql.py  tx.py  uri.py  user_store_factory.py  user_store_scim.py  vault.py  vault_env_vars.py  vault_utils.py  vector_store.py
app/ai/: messages.py
app/ai/tests/: test_sql_chat_message_history.py  test_sql_hat_message_history.py
app/data_fetching/: factory.py  iface.py  mock.py  okta.py  utils.py
app/email_comms/: consts.py  router.py
app/email_comms/google_cloud/: gmail_comm.py  gmail_utils.py  router.py
app/evaluation/: stores.py  testing.py
app/health/: README.md  __init__.py  domain.py  model.py  route.py  service.py  sqlalchemy_service.py
app/llm/: access_prediction.py  agents.py  conversation.py  fake_model.py  graph.py  messages.py  model.py  nodes.py  prompts.py  sql_chat_message_history.py  streaming.py
app/llm/guardrails/: on_topic.py
app/llm/tests/: test_azure_provision.py  test_data_owner.py  test_fade_model.py  test_graph.py  test_rules_engine.py  test_sql_chat_message_history.py  test_tools.py  test_webhooks.py
app/llm/tools/: app_extra_intructions_tool.py  consts.py  create_ticket_for_role_request_tool.py  deny_access_tool.py  models.py  provision_role_tool.py  retriever_tool.py  strings.py  users_access_by_names.py  utils.py
app/llm/tools/access_data/: factory.py  iface.py  mock.py  webhook.py
app/llm/tools/create_ticket/: email.py  factory.py  iface.py  jira.py  mock.py  servicenow.py  slack.py  webhook.py
app/llm/tools/data_owner/: azure.py  factory.py  iface.py  mock.py  (+1 more)
app/routers/: application.py  asyncjobs.py  content.py  conversation.py  directories.py  internal.py  org.py  prediction.py  request.py  rule.py  workspace.py
app/slack/: __init__.py  actions_approve_deny.py  app.py  event_app_home_opened.py  event_message.py  router.py  store_sql.py
app/tests/: conftest.py  test_application_store_sql.py  test_azure_user_store.py  test_create_user_store.py  test_models_facade_sql.py  test_user_store_sql.py  test_vault_env_vars.py  test_vault_utils.py  test_vector_store.py  test_workspace_store_sql.py
app/user_stores/: user_store_azure.py  user_store_scim.py
app/utils/: azure_client.py  boundary_client.py  changes_discovery.py  strings.py
app/utils/emails/: factory.py  gmail.py  iface.py  smtp.py
app/vault/: api.py  env_vars.py  k8s.py
app/vault/tests/: k8s_test.py
contrib/quickstart/: quickstart.ipynb
docs/dev/: README.md  api_exploration.ipynb  ids.md
docs/integration/: slack.md  slack_manifest.yml
migrations/: env.py
migrations/versions/: 75a1807159c8_adds_active_to_rules.py  773375bb1e74_adds_application_columns_for_access_.py  802c0e0c8f3f_changes_checkpointer_tables.py  ad280954d50d_rename_applications_and_workspaces_.py  bd921dc0747d_create_a_baseline_migrations.py
tests/: test_models_facade_sql.py
(+15 files in other folders)
