[tool.poetry]
name = "accessbot"
version = "0.0.1-alpha"
description = "Streamline application access with AI-Powered workflow automation."
authors = ["Indexia Technologies, ltd."]
license = "Proprietary"
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
sqlalchemy = "^2.0.27"
nanoid = "^2.0.0"
pydantic-settings = "^2.2.1"
pyjwt = "^2.8.0"
cryptography = "^42.0.4"
langchain = "0.1.10"
cachetools = "^5.3.2"
openai = "^1.12.0"
psycopg2-binary = "^2.9.9"
langchain-openai = "0.0.5"
injector = "^0.21.0"
pgvector = "^0.2.5"
jsonpatch = "^1.33"

[tool.poetry.group.test.dependencies]
ruff = "^0.2.2"
sqlite-vss = "^0.1.2"
sentence-transformers = "^2.4.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.2"


[tool.poetry.group.messaging.dependencies]
slack-bolt = "^1.18.1"

