[tool.poetry]
name = "accessbot"
version = "0.0.1-alpha"
description = "Streamline application access with AI-Powered workflow automation."
authors = ["Indexia Technologies, ltd."]
license = "Proprietary"
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
sqlalchemy = "^2.0.27"
nanoid = "^2.0.0"
pydantic-settings = "^2.2.1"
pyjwt = "^2.8.0"
cryptography = "^42.0.4"
langchain = "^0.2"
cachetools = "^5.3.2"
psycopg2-binary = "^2.9.9"
langchain-openai = "^0.1.6"
injector = "^0.21.0"
pgvector = "^0.2.5"
jsonpatch = "^1.33"
langgraph = "^0.0"
langchain-community = "^0.2.1"
slack-bolt = "^1.18.1"

[tool.poetry.group.test.dependencies]
ruff = "^0.2.2"
sqlite-vss = "^0.1.2"
sentence-transformers = "^2.4.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.2"

[tool.poetry.scripts]
evaluation = "app.evaluation.testing:start"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
